[tool.poetry]
name = "newamerica-pdf-generator"
version = "0.1.0"
description = ""
authors = ["Karl Hobley <karl@torchbox.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
weasyprint = "^49.0"
requests = "^2.22"
boto3 = "^1.9"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
